--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ main {
 
 #logo-block {
   width: 6em;
-  margin-left: 10em;
+  margin-left: 2em;
 }
 
 #nav-button-placeholder {
@@ -63,9 +63,9 @@ padding: 2em;
 }
 
 #last-name {
-  font-size: 6em;
+  font-size: 4em;
   font-family: Arial, Helvetica, sans-serif;
-
+  margin-top: .3em;
 }
 
 #about-paragraph-section {
