--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: #FAFAFA;
+  background-image: url(./images/background2.png);
 }
 
 main {
@@ -80,19 +81,26 @@ padding: 2em;
   margin-left: 2em;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.2em;
+}
+
+b {
+  color: darkorchid;
+  font-size: 1.2em;
 }
 
 #bottom-section {
   display: flex;
   flex-direction: column;
   margin-left: 9.5em;
-  margin-top: -6em;
+  margin-top: -4em;
 }
 
 #icon-section {
   display: flex;
   justify-content: flex-start;
   margin-left: 1em;
+  margin-top: 1em;
 }
 
 #github {
