--- a/main.css
+++ b/main.css
@@ -1,89 +1,78 @@
 body {
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 }
 
 main {
-
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  background-image: url(./images/Background-About.png);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: 80%;
 }
 
-#nav-container {
+#nav-section {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+
 }
 
-#logo-block {
-  width: 6em;
-  margin-left: 2em;
+#nav-logo {
+  width: 5em;
 }
 
-#nav-button-placeholder {
+#nav-dropdown {
   width: 3em;
   margin-right: 10em;
 }
 
-#bioPage {
-  display: flex;
-  justify-content: center;
-  background-image: url(./images/background2.png);
-  background-repeat: no-repeat;
-  margin-top: 0em;
-  margin-bottom: 3em;
+#profile-image {
+  width: 42em;
 }
 
-#about-me-text-container {
-  display: flex;
-  flex-direction: column;
-  margin-left: 10em;
-  margin-top: 6em;
+#right-container {
+  margin-left: 2em;
 }
 
-#profile-image-container {
-  width: 30em;
-}
-
-img {
-width: 480px;
-padding: 2em;
-}
-
-#about-img {
-  width: 2em;
-  margin-top: -2.3em;
-}
-
-#about-graphic {
-  font-size: 1.2em;
-
+#about-image {
+  width: 3em;
+  margin-right: 2em;
 }
 
 #first-name {
   font-size: 3em;
   font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: -.5em;
-  margin-left: 5px;
-
-
 }
 
 #last-name {
-  font-size: 4em;
+  font-size: 5em;
   font-family: Arial, Helvetica, sans-serif;
-  margin-top: .3em;
 }
 
-#about-paragraph-section {
+#top-section {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
   width: 40em;
   margin-top: 2em;
 }
 
+#about-me-page {
+  display: flex;
+  justify-content: center;
+}
+
+#paragraph-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 5em;
+}
+
 #about-me-paragraph {
-  padding-right: 5em;
-  margin-left: 2em;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.3em;
+  line-height: 2em;
 }
 
 b {
@@ -93,22 +82,12 @@ b {
 
 #bottom-section {
   display: flex;
-  flex-direction: column;
-  margin-left: 7em;
-  margin-top: 0em;
+  flex-direction: row;
+  margin-left: 5em;
 }
 
-#icon-section {
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 0em;
-  margin-top: 1em;
-}
-
-#github {
-  width: 2em;
-  margin-left: -3em;
-  font-weight: bolder;
+#social-icons {
+  width: 3em;
 }
 
 #footer {
