--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,11 @@ li a {
   color: grey;
 }
 
+li a:hover {
+  text-decoration: none;
+  color: lightgrey;
+}
+
 #about-me-page {
   display: flex;
   justify-content: flex-end;
