--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,7 +32,7 @@ li a:hover {
   color: lightgrey;
 }
 
-#about-me-page {
+#about-container {
   display: flex;
   justify-content: flex-end;
   margin-top: 5em;
