--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,16 +9,12 @@ body {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  background-image: url(./assets/about2.png);
-  background-repeat: no-repeat;
-  background-size: 80%;
-  background-position: 25em;
 }
 
-#tech-page {
-  background-image: url(./assets/about2.png);
+#about-container {
+  background-image: url(./assets/about.png);
   background-repeat: no-repeat;
-  background-size: 90%;
+  background-size: 80%;
   background-position: 25em;
 }
 
@@ -40,6 +36,7 @@ li a:hover {
 
 #profile-image {
   width: 42em;
+  margin-left: 15em;
 }
 
 #right-container {
@@ -94,6 +91,36 @@ b {
 #social-icons {
   width: 3em;
   margin-right: 1.5em;
+}
+
+
+#projects-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  background-image: url(./assets//);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 25em;
+}
+
+#projects-left-side {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  
+}
+
+#projects-right-side {
+  display: flex;
+  justify-content: center;
+}
+
+#tech-container {
+  background-image: url(./assets/about2.png);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: 25em;
 }
 
 #footer {
